[metadata]
name = flake8_pydantic_skip
version = 0.1.0
description = flake8 plugin which checks for skip definition in pydantic model definition
url = https://github.com/oyfml/flake8-pydantic-skip

[options]
py_modules = flake8_pydantic_skip
install_requires =
    flake8>=3.9
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    TCS=flake8_pydantic_skip:Plugin

[bdist_wheel]
universal = True