[metadata]
name = flake8_pydantic_skip
version = 0.1.0
description = flake8 plugin which checks for misuse of custom `Skip` annotation assignment for pydantic models
url = https://github.com/oyfml/flake8-pydantic-skip
download_url = https://github.com/oyfml/flake8-pydantic-skip/archive/refs/tags/v0.1.0.tar.gz
license='MIT'
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
py_modules = flake8_pydantic_skip
install_requires =
    flake8>=3.9
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    TCS=flake8_pydantic_skip:Plugin

[bdist_wheel]
universal = True